# CANntastic

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
.github/workflows/: build-for-esp32.yml  cmake-single-platform.yml
main/: CMakeLists.txt  Kconfig.projbuild  ble_hid.c  ble_hid.h  canbus.c  canbus.h  cantastic.h  commithash.c.template  commithash.cmake  commithash.py  control_event.c  control_event.h  control_scheme.c  control_scheme.h  controls.h  dns_server.c  dns_server.h  gatt_svr.c  gatt_svr.h  gatt_vars.c  hello_world_main.c  hid_codes.h  hid_func.c  main.c  map.h  tpms.c  tpms.h  vehicles.h  web_config.c  web_config.h
main/custom/: gpio.h
main/scheme/: basic.c  basic.h  webconfig.c  webconfig.h
main/vehicle/: generic.h  tiger1200_g3.c  tiger1200_g3.h
util/cross-defs/: index.js  package.json
webconfig/: README.md  bud.config.ts  package.json  tailwind.config.ts  tsconfig.json
webconfig/src/: app.html  controls.json  controls.xd.json  index.css  index.ejs  index.ts
x_defs/: controls.json
